--- a/index.html
+++ b/index.html
@@ -4,42 +4,13 @@
     <meta charset="UTF-8" />
 
     <!--Archivo CSS-->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Portafolio Giuliano</title>
-
-    <!--font awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-
-    <!--IconScout-->
-    <link
-    rel="stylesheet"  href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
 
   </head>
   <body>
 
-    <!-- Navbar start here -->
+    <p>Back Ground Gradient</p>
 
-    <nav class="navbar">
-      <h1 class="navbar-logo">
-      </h1>
-      <nav class="navbar-menu">
-        <button type="button" class="uil uil-bag"></button>
-        <button type="button" class="uil uil-laptop"></button>
-        <button type="button" class="uil uil-envelope active"></button>
-        <button type="button" class="uil uil-heart"></button>
-      </nav>
-    </nav>
-
-
-
-    <!-- Navbar ends here -->
-
-
-
-
-    <!-- Script -->
-    <script src="js/script.js"></script>
-    <script src="js/navbar.js"></script>
-    
   </body>
 </html>
