--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
 
     <!--Archivo CSS-->
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- Icons SideBar -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Portafolio Giuliano</title>
 
   </head>
   <body>
 
-    <p>Background Linear-Bottom-Gradient</p>
+    <nav class="sidebar">
+      
+      <div class="logo-menu">
+        <h2 class="logo">Giuliano Medina</h2>
+        <i class='bx bx-menu toggle-btn'></i>
+      </div>
+
+      <ul class="list">
+        <li class="list-item active">
+          <a href="#">
+            <i class='bx bxs-dashboard' ></i>
+            <span class="link-name" style="--i:1">Dashboard</span>
+          </a>
+        </li>
+        <li class="list-item">
+          <a href="#">
+            <i class='bx bx-camera-movie'></i>
+            <span class="link-name" style="--i:2">Eventos</span>
+          </a>
+        </li>
+        <li class="list-item">
+          <a href="#">
+            <i class='bx bx-bowl-hot' ></i>
+            <span class="link-name" style="--i:3">Comida</span>
+          </a>
+        </li>
+        <li class="list-item">
+          <a href="#">
+            <i class='bx bxl-deezer' ></i>
+            <span class="link-name" style="--i:4">Baile</span>
+          </a>
+        </li>
+        <li class="list-item">
+          <a href="#">
+            <i class='bx bx-like' ></i>
+            <span class="link-name" style="--i:5">Social Media</span>
+          </a>
+        </li>
+      </ul>
+
+
+    </nav>
+
+    <script src="js/navbar.js"></script>
 
   </body>
 </html>
