--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
 
+    <!-- Sidebar-->
+
     <nav class="sidebar">
       
       <div class="logo-menu">
@@ -51,9 +53,11 @@
           </a>
         </li>
       </ul>
-
-
     </nav>
+
+    <!-- inicio -->
+
+    
 
     <script src="js/navbar.js"></script>
 
