--- a/index.html
+++ b/index.html
@@ -57,7 +57,19 @@
 
     <!-- inicio -->
 
-    
+    <div class="background">
+
+      <div class="triangle"></div>
+
+    </div>
+
+    <section id="profile">
+
+      <div class="profilePic">
+        <img src="imagenes/img_giuliano.png" alt="Imagen de Giuliano Medina">
+      </div>
+
+    </section>
 
     <script src="js/navbar.js"></script>
 
